@startuml team3
class ParentsGenerator {
    +tagNode1: HTMLElement
    +PadText: Text
    +construct(Elem, valu, text, ClsN)
}
class DivTag {
    +construct()
}
ParentsGenerator <|-- DivTag : extends
class InputTag {
    +construct()
}
ParentsGenerator <|-- InputTag : extends
class ButtonTag {
    +construct(Elem, valu, text, ClsN)
}
ParentsGenerator <|-- ButtonTag : extends
class Save {
    +data: String
    +saveInArr(): void
    +saveInLocalStorage(): void
}
class SaveBefore {
    -arr: Array
    -keyText: String
    -KeyCount: int
    +increaseKeyCount(): void
    +construct(data)
}
Save <|-- SaveBefore : extends
class SaveAfter {
    arr: Array
    keyText: String
    KeyCount: int
    increaseKeyCount(): void
    construct(data)
}
Save <|-- SaveAfter : extends
class Eval {
    +division(): Object
    +operatorCal(): Number
}
class PrintOut {
    -input: Array
    +getNum(): String
    +disPrint(): void
    +construct(input)
}
@enduml
